objects/Customer_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the WhatId from the Activity when the WhatId is an Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Activities</relationshipLabel>
        <relationshipName>CustomerActivities_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the WhoId from the Activity when the WhoId is a Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Activities</relationshipLabel>
        <relationshipName>CustomerActivities_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Profile__c</fullName>
        <label>CreatedBy Profile</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Brand__c</fullName>
        <label>Dealer Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mack</fullName>
                </value>
                <value>
                    <fullName>Volvo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tells if the activities are created by Dealer User(Partner User) or not</description>
        <label>IsPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Brand__c</fullName>
        <formula>TEXT($User.Dealer_Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Brand</label>
        <type>Text</type>
    </fields>
    <label>Customer Activity</label>
    <nameField>
        <label>Customer Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>